--- a/cs499mobileapp/app/src/main/AndroidManifest.xml
+++ b/cs499mobileapp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cs499app.cs499mobileapp">
 
+    <permission
+        android:name="AndroidApp.IN_APP_BROADCAST"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="AndroidApp.IN_APP_BROADCAST" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".MusicService"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
 
 </manifest>
