--- a/cs499mobileapp/app/src/main/AndroidManifest.xml
+++ b/cs499mobileapp/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="AndroidApp.IN_APP_BROADCAST" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
