--- a/cs499mobileapp/app/src/main/AndroidManifest.xml
+++ b/cs499mobileapp/app/src/main/AndroidManifest.xml
@@ -6,8 +6,12 @@
         android:name="AndroidApp.IN_APP_BROADCAST"
         android:protectionLevel="signature" />
 
+    <permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <uses-permission android:name="AndroidApp.IN_APP_BROADCAST" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
