--- a/cs499mobileapp/app/src/main/AndroidManifest.xml
+++ b/cs499mobileapp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cs499app.cs499mobileapp">
 
+    <uses-permission android:name="AndroidApp.IN_APP_BROADCAST" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <permission
         android:name="AndroidApp.IN_APP_BROADCAST"
         android:protectionLevel="signature" />
@@ -9,10 +15,10 @@
     <permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <uses-permission android:name="AndroidApp.IN_APP_BROADCAST" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET" />
+    <permission
+        android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
 
     <application
         android:allowBackup="true"
