--- a/cs499mobileapp/app/build.gradle
+++ b/cs499mobileapp/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.github.lzyzsd:circleprogress:1.2.1'
     compile 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
+    compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
 }
