--- a/DownwaveStreamer/app/src/main/AndroidManifest.xml
+++ b/DownwaveStreamer/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name="cs499app.downwavestreamer.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
@@ -39,7 +39,7 @@
         </activity>
 
         <service
-            android:name=".service.MusicService"
+            android:name="cs499app.downwavestreamer.service.MusicService"
             android:enabled="true"
             android:exported="true" />
 
