--- a/cs499mobileapp/app/build.gradle
+++ b/cs499mobileapp/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.github.lzyzsd:circleprogress:1.2.1'
     compile 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
     compile 'com.android.support:support-v4:26.+'
+    compile 'com.google.code.gson:gson:2.6.2'
     testCompile 'junit:junit:4.12'
 }
